Bug 245763 - Bluetooth command le_read_supported_status has the wrong name
Summary: Bluetooth command le_read_supported_status has the wrong name
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: wireless (show other bugs)
Version: CURRENT
Hardware: Any Any
: --- Affects Only Me
Assignee: Hans Petter Selasky
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-20 13:25 UTC by Marc Veldman
Modified: 2020-05-18 08:58 UTC (History)
1 user (show)

See Also:


Attachments
Patch to rename le_read_supported_status into ..._states (3.57 KB, patch)
2020-04-20 13:30 UTC, Marc Veldman
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Marc Veldman 2020-04-20 13:25:17 UTC

    
Comment 1 Marc Veldman 2020-04-20 13:30:47 UTC
Created attachment 213603 [details]
Patch to rename le_read_supported_status into ..._states

sys/netgraph/bluetooth/include/ng_hci.h

defines NG_HCI_OCF_LE_READ_SUPPORTED_STATUS
This should probably be NG_HCI_OCF_LE_READ_SUPPORTED_STATES
(See bluetooth core v5.2 specifications Vol4. Part E. 7.8.27)

Rename the returned parameters and the hccontrol command as well.
Comment 2 commit-hook freebsd_committer freebsd_triage 2020-04-20 13:44:19 UTC
A commit references this bug:

Author: hselasky
Date: Mon Apr 20 13:44:15 UTC 2020
New revision: 360116
URL: https://svnweb.freebsd.org/changeset/base/360116

Log:
  Substitute le_read_supported_status with le_read_supported_states.
  Refer to bluetooth core v5.2 specifications Vol4. Part E. 7.8.27.

  PR:		245763
  Submitted by:	Marc Veldman <marc@bumblingdork.com>
  MFC after:	1 week
  Sponsored by:	Mellanox Technologies

Changes:
  head/sys/netgraph/bluetooth/hci/ng_hci_cmds.c
  head/sys/netgraph/bluetooth/include/ng_hci.h
  head/usr.sbin/bluetooth/hccontrol/le.c
Comment 3 Hans Petter Selasky freebsd_committer freebsd_triage 2020-04-20 13:44:39 UTC
Thank you!

--HPS
Comment 4 commit-hook freebsd_committer freebsd_triage 2020-05-18 08:57:41 UTC
A commit references this bug:

Author: hselasky
Date: Mon May 18 08:57:22 UTC 2020
New revision: 361164
URL: https://svnweb.freebsd.org/changeset/base/361164

Log:
  MFC r360116:
  Substitute le_read_supported_status with le_read_supported_states.
  Refer to bluetooth core v5.2 specifications Vol4. Part E. 7.8.27.

  PR:		245763
  Submitted by:	Marc Veldman <marc@bumblingdork.com>
  Sponsored by:	Mellanox Technologies

Changes:
_U  stable/12/
  stable/12/sys/netgraph/bluetooth/hci/ng_hci_cmds.c
  stable/12/sys/netgraph/bluetooth/include/ng_hci.h
  stable/12/usr.sbin/bluetooth/hccontrol/le.c
Comment 5 commit-hook freebsd_committer freebsd_triage 2020-05-18 08:58:42 UTC
A commit references this bug:

Author: hselasky
Date: Mon May 18 08:57:55 UTC 2020
New revision: 361165
URL: https://svnweb.freebsd.org/changeset/base/361165

Log:
  MFC r360116:
  Substitute le_read_supported_status with le_read_supported_states.
  Refer to bluetooth core v5.2 specifications Vol4. Part E. 7.8.27.

  PR:		245763
  Submitted by:	Marc Veldman <marc@bumblingdork.com>
  Sponsored by:	Mellanox Technologies

Changes:
_U  stable/11/
  stable/11/sys/netgraph/bluetooth/hci/ng_hci_cmds.c
  stable/11/sys/netgraph/bluetooth/include/ng_hci.h
  stable/11/usr.sbin/bluetooth/hccontrol/le.c